Update 'a5bpvu49c-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-26c477cc7b.0r12.p3.openshiftapps.com/rhtap/rhtap-qe:c49e786ab79236e82bb3d975a63e45728ffb8173@sha256:0c27b7c0853b0eef4d6f5a0c1822ea56d1a98e5d4b1c15f467307f22ccfe9ee4

--- a/components/a5bpvu49c-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/a5bpvu49c-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: a5bpvu49c-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-26c477cc7b.0r12.p3.openshiftapps.com/rhtap/rhtap-qe:c49e786ab79236e82bb3d975a63e45728ffb8173@sha256:0c27b7c0853b0eef4d6f5a0c1822ea56d1a98e5d4b1c15f467307f22ccfe9ee4
+          name: container-image
